PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-

* Changes since Version 0.4.1:
** Modifications, Fixes and Improvements:
- Add ability to convert the case of one or several letters to standard key bindings which now behave as before when an
  area is marked but can also operate with no marked area, converting N letters from point (with N defaulting to 1):
  - The ~C-x C-l~ key sequence is not bound to the new *pel-downcase-letter* command.
  - The ~C-x C-u~ key sequence is not bound to the new *pel-upcase-letter* command.
- The *pel-next-frame* (bound to ~<f11> F n~) and *pel-previous-frame* (bound to ~<f11> F p~) now honour the frame numbers:
  the *pel-next-frame* changes to the frame that has a larger number than the current frame and the *pel-previous-frame* changes
  the frame to the one that has a lower frame number.  The used Emacs functions behave in the reverse direction; the PEL commands
  now use the more conventional order.
- The *pel-duplicate-line* command (bound to ~<f6> d~) now supports value 0 for the argument: with numeric argument value 0
  the command creates a single duplicate but does not move point: it keeps the point on the original line.
- Add key binding ~M-<f5>~ to *pel-search-word-from-top*, it's easier to type with a numeric prefix
  than the ~M-<f11> s .~ key sequence (which is retained) and is a very useful command to be able to
  quickly access it.
- Add key binding ~<f11> b L~ to *emacs-lock-mode*.
- Add key bindings to *deadgrep-mode*: activate *deadgred-edit-mode* with ~C-c C-p~ and get out of it with ~C-x C-s~
- Add ~<f11> w =~ binding to balance-windows, while keeping the original ~<f11> w s =~
- Better iedit support for tcl $variable notation.
- Add *pel-bookmark-info* bound to ~<f11> ' M-?~.  It prints information about
  bookmark control in a specialized help buffer.
- Improved auto-completion introspection report done by ~<f11> , ?~.
  Renamed the *pel-completion-help* to *pel-completion-info* for name