@@ -2,6 +2,11 @@ PEL -- Pragmatic Emacs Library --  NEWS         -*- org -*-
 
 * Changes since Version 0.4.1:
 ** Modifications, Fixes and Improvements:
+- Enhanced the code template skeleton ability to create section titles.  A title string that begins
+  with the character ~.~ is inserted verbatim following a separator line.  A title that starts with the ~,~ character
+  is inserted verbatim.
+  - The default value of the *pel-c-skel-hfile-section-titles* customized variable uses this new feature to insert the
+    C++ support 'extern "C"' pre-processor code in C header files templates.
 - Add ability to convert the case of one or several letters to standard key bindings which now behave as before when an
   area is marked but can also operate with no marked area, converting N letters from point (with N defaulting to 1):
   - The ~C-x C-l~ key sequence is not bound to the new *pel-downcase-letter* command.
